--- a/.github/workflows/badge.yml
+++ b/.github/workflows/badge.yml
@@ -15,8 +15,11 @@ jobs:
 
       - name: Test
         run: |
-            curl -L \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${GITHUB_TOKEN}"\
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/kat-kel/spotify-api/stats/contributors
+          VAR=$(curl -L \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${GITHUB_TOKEN}"\
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/kat-kel/spotify-api/stats/contributors)
+
+      - name: Print
+        run: echo $VAR
